# bit-txintxa

./: .gitignore  README.md  package.json
apps/backend/: Cargo.toml
apps/frontend/web/: package.json  pnpm-lock.yaml
apps/frontend/web/components/ui/button/: ToggleLangBtn.tsx
apps/frontend/web/messages/: en.json  pt.json
