[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15"
nostr-sdk = "0.44"
